--- a/bts/index.html
+++ b/bts/index.html
@@ -61,7 +61,7 @@
 
     <div class="wrapper">
       <div id="video-player" class="player">
-        <video id="video" controls src="/img/bts.mp4" poster="/img/btsthumbnail.png">
+        <video id="video" controls src="https://video-cdn-hippolms-storage.hippovideo.io/wiz/videos/converted/1655923/40100444.mp4?Expires=1696098181&Signature=VNH1lREia8q4YOHHNmvbRkHxMfkrevzdakmeAWUisQzWE9ijj~chUY70Kpc1F4d5wvJYbVvX9sOfUK6oAHvKKXZ-IWajE9F9VONtCgAwPbnm-RoOlFGQUwOvjSEJTI~uTE6Jgqw-e~x9gG~tONC9Y3gqH7z80rfGZj7EvtGkly~2fBaeONvFpAfmUZEqaAYxorDZS1rp5I5PFTUUw-zepC5QXyk1nExS9RmwlyTjG73erbVbucU3cy4~ld9Iu6IcHwQ14FnIJm6SVgrxb1~6oArW6BSfahejeVVRAFqXU4vdemxA1kXwDk2kAkGe7guAp3ZHT1YKTUfW--HIG~TFMw__&Key-Pair-Id=APKAJJXHJYDFHRLVDFRQ" poster="/img/btsthumbnail.png">
         </video>
         <canvas id="video-ambilight" width="720" height="388"></canvas>
         <!-- The video poster is also included as a hidden `<img>`, so we can have an "ambilight" bg on pageload already. -->
