--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </ul>
 </nav>
   <video autoplay loop muted class="wrapper__video">
-      <source src="/img/header_video.mp4">
+      <source src="/img/bt.mp4">
    </video>  
 	<main>
     <div class="topnav">
@@ -152,7 +152,15 @@ cherish after. <br><br>
 <a class="frame__links" target="_blank" href="https://goo.gl/maps/nKDDN1FYmsQVk7Ad6">📍 The Choice School, Tripunithura</a><br>
  <a class="frame__links" target="_blank" href="#">📅 16 September @ 8AM</a>
 </p>
- <div class="header_image"
+ <div class="header_image">
+    <div class='slideshow'>
+  <img src="/img/gallery/06.jpg">
+  <img src="/img/gallery/15.jpg">
+  <img src="/img/gallery/55.jpg">
+  <img src="img/gallery/32.jpg">
+  <img src="img/gallery/52.jpg">
+  <img src="img/gallery/20.jpg">
+  </div>
  </div>
    </div>
  </div>
