--- a/gallery/index.html
+++ b/gallery/index.html
@@ -38,14 +38,13 @@
       <li><a href="/">Home</a></li>
       <li><a href="/events">Events</a></li>
       <li><a href="/sponsors">Sponsors</a></li>
-      <li><a href="/bts">BTS</a></li>
     </ul>
   </nav>
   <div class="topnav">
     <div id="navbar" class="frame">
       <div class="frame__title-wrap">
-        <h1 class="frame__title">FRINGES 2023</h1>
-        <p class="frame__info">Archaic Walls Of Hollywood </p>
+        <h1 class="frame__title">FRINGES 2024</h1>
+        <p class="frame__info">Mythos and Majesty</p>
       </div>
 
     </div>
@@ -53,7 +52,7 @@
 
 
   <div class="text">
-    <p>Fringes 2022 Gallery<br><br></p>
+    <p>Fringes 2023 Gallery<br><br></p>
   </div>
 
 
@@ -144,8 +143,7 @@
 
   </div>
 
-  <p style="margin-left: 10px;" class="copyright">© All rights reserved, Impulse 2023 | Made by <a
-      href="https://ashwinn.xyz">Ashwin Anil</a></p>
+  <p style="text-align: center;" class="copyright">&copy; All rights reserved, The Choice School Kochi - Senior School <br> Main Website:<a style="color: aliceblue;" target="_blank" href="https://www.choiceschool.com">www.choiceschool.com</a>ㅤ|ㅤ <a target="_blank" href="https://www.instagram.com/thechoiceschool_events?igsh=MTd4aGFremxvbnF4Ng=="><i style="color: aliceblue;" class="fa-brands fa-instagram"></i></a>ㅤ<a target="_blank" href="https://www.youtube.com/@choiceseniorschool"><i style="color: aliceblue;" class="fa-brands fa-youtube"></i></a>
 
 
 
@@ -171,7 +169,7 @@
     .container img:hover {
       transform: scale(1.04);
       -webkit-filter: grayscale(0);
-      filter: grayscale(0;
+      filter: grayscale(0);
       }
 
       .frame .copyright {
