--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -38,22 +38,21 @@
     <li><a href="/">Home</a></li>
     <li><a href="/gallery">Gallery</a></li>
     <li><a href="/events">Events</a></li>
-    <li><a href="/bts">BTS</a></li>
   </ul>
 </nav>
 	<main>
     <div class="topnav">
 		<div id="navbar" class="frame">
 			<div class="frame__title-wrap">
-				<h1 class="frame__title">FRINGES 2023</h1>
-				<p class="frame__info">Archaic Walls Of Hollywood </p>
+				<h1 class="frame__title">FRINGES 2024</h1>
+				<p class="frame__info">Mythos and Majesty </p>
 			</div>
 			
 		</div>
     </div>
 
     <div class="text">
-  <p>Sponsors</p>
+  <p>2023 Sponsors</p>
   
 </div>
  
@@ -250,7 +249,8 @@
     
 	
 	
-			<p>© All rights reserved, Fringes 2023 | Made by <a href="https://ashwinn.xyz">Ashwin Anil</a></p>
+ <p style="text-align: center;" class="copyright">&copy; All rights reserved, The Choice School Kochi - Senior School <br> Main Website:<a style="color: aliceblue;" target="_blank" href="https://www.choiceschool.com">www.choiceschool.com</a>ㅤ|ㅤ <a target="_blank" href="https://www.instagram.com/thechoiceschool_events?igsh=MTd4aGFremxvbnF4Ng=="><i style="color: aliceblue;" class="fa-brands fa-instagram"></i></a>ㅤ<a target="_blank" href="https://www.youtube.com/@choiceseniorschool"><i style="color: aliceblue;" class="fa-brands fa-youtube"></i></a>
+
 		
   </main>
 	<script src="/script.js"></script>
