--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <h1 class="head_contact">Contact</h1>
         <div class="contact_text">
       <h2 class="role">E-mail</h2>
-      <a href="mailto:fringes2.mythosandmajesty2024@gmail.com" class="number">fringes2.mythosandmajesty2024@gmail.com</a>
+      <a href="mailto:fringes.mythosandmajesty2024@gmail.com" class="number">fringes.mythosandmajesty2024@gmail.com</a>
      
         </div>
       
