--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="shortcut icon" href="/favicon.png">
 	<link rel="stylesheet" href="https://use.typekit.net/zhq0vyf.css">
 	<link rel="stylesheet" type="text/css" href="/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
 	<link rel="icon" href="/img/img.png" type="image/png" sizes="16x16">
 	
 </head>
