--- a/gallery/index.html
+++ b/gallery/index.html
@@ -53,90 +53,27 @@
 
 
   <div class="text">
-    <p>Fringes 2023 Gallery<br><br></p>
+    <p>Fringes 2024 Gallery<br><br></p>
   </div>
 
 
   <div class="container">
-    <img src="/img/gallery/72.jpg">
-<img src="/img/gallery/17.jpg">
-<img src="/img/gallery/03.jpg">
-<img src="/img/gallery/27.jpg">
-<img src="/img/gallery/11.jpg">
-<img src="/img/gallery/40.jpg">
-<img src="/img/gallery/37.jpg">
-<img src="/img/gallery/14.jpg">
-<img src="/img/gallery/13.jpg">
-<img src="/img/gallery/69.jpg">
-<img src="/img/gallery/70.jpg">
-<img src="/img/gallery/66.jpg">
-<img src="/img/gallery/24.jpg">
-<img src="/img/gallery/08.jpg">
-<img src="/img/gallery/41.jpg">
-<img src="/img/gallery/35.jpg">
-<img src="/img/gallery/53.jpg">
-<img src="/img/gallery/26.jpg">
-<img src="/img/gallery/22.jpg">
-<img src="/img/gallery/18.jpg">
-<img src="/img/gallery/38.jpg">
-<img src="/img/gallery/23.jpg">
-<img src="/img/gallery/58.jpg">
-<img src="/img/gallery/34.jpg">
-<img src="/img/gallery/16.jpg">
-<img src="/img/gallery/25.jpg">
-<img src="/img/gallery/74.jpg">
-<img src="/img/gallery/47.jpg">
-<img src="/img/gallery/02.jpg">
-<img src="/img/gallery/29.jpg">
-<img src="/img/gallery/49.jpg">
-<img src="/img/gallery/04.jpg">
-<img src="/img/gallery/43.jpg">
-<img src="/img/gallery/28.jpg">
-<img src="/img/gallery/05.jpg">
-<img src="/img/gallery/61.jpg">
-<img src="/img/gallery/62.jpg">
-<img src="/img/gallery/76.jpg">
-<img src="/img/gallery/75.jpg">
-<img src="/img/gallery/30.jpg">
-<img src="/img/gallery/06.jpg">
-<img src="/img/gallery/10.jpg">
-<img src="/img/gallery/52.jpg">
-<img src="/img/gallery/45.jpg">
-<img src="/img/gallery/42.jpg">
-<img src="/img/gallery/48.jpg">
-<img src="/img/gallery/63.jpg">
-<img src="/img/gallery/09.jpg">
-<img src="/img/gallery/46.jpg">
-<img src="/img/gallery/64.jpg">
-<img src="/img/gallery/67.jpg">
-<img src="/img/gallery/31.jpg">
-<img src="/img/gallery/57.jpg">
-<img src="/img/gallery/77.jpg">
-<img src="/img/gallery/56.jpg">
-<img src="/img/gallery/68.jpg">
-<img src="/img/gallery/60.jpg">
-<img src="/img/gallery/32.jpg">
-<img src="/img/gallery/54.jpg">
-<img src="/img/gallery/73.jpg">
-<img src="/img/gallery/19.jpg">
-<img src="/img/gallery/12.jpg">
-<img src="/img/gallery/07.jpg">
-<img src="/img/gallery/71.jpg">
-<img src="/img/gallery/21.jpg">
-<img src="/img/gallery/44.jpg">
-<img src="/img/gallery/15.jpg">
-<img src="/img/gallery/20.jpg">
-<img src="/img/gallery/55.jpg">
-<img src="/img/gallery/51.jpg">
-<img src="/img/gallery/50.jpg">
-<img src="/img/gallery/59.jpg">
-<img src="/img/gallery/65.jpg">
-<img src="/img/gallery/36.jpg">
-<img src="/img/gallery/01.jpg">
-<img src="/img/gallery/79.jpg">
-<img src="/img/gallery/33.jpg">
-<img src="/img/gallery/39.jpg">
-<img src="/img/gallery/78.jpg">
+    <img src="/img/gallery/80.JPG">
+<img src="/img/gallery/81.JPG">
+<img src="/img/gallery/82.JPG">
+<img src="/img/gallery/83.JPG">
+<img src="/img/gallery/84.JPG">
+<img src="/img/gallery/85.JPG">
+<img src="/img/gallery/86.JPG">
+<img src="/img/gallery/87.JPG">
+<img src="/img/gallery/88.JPG">
+<img src="/img/gallery/89.JPG">
+<img src="/img/gallery/90.JPG">
+<img src="/img/gallery/91.JPG">
+<img src="/img/gallery/92.JPG">
+<img src="/img/gallery/93.JPG">
+<img src="/img/gallery/94.JPG">
+<img src="/img/gallery/95.JPG">
 
 
 
