--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <ul>
     <li><a href="/events">Events</a></li>
     <li><a href="/gallery">Gallery</a></li>
-    <li><a href="/sponsors">Sponsors</a></li>s
+    <li><a href="/sponsors">Sponsors</a></li>
   </ul>
 </nav>
   <video autoplay loop muted class="wrapper__video">
