--- a/gallery/index.html
+++ b/gallery/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Fringes 2023</title>
+  <title>Fringes 2024</title>
   <meta name="description" content="Archaic Walls of Hollywood" />
   <meta name="keywords" content="Fringes, choice, The choice school, Impulse 2023," />
   <meta name="author" content="Ashwin" />
@@ -58,7 +58,7 @@
 
 
   <div class="container">
-    <img src="/img/gallery/80.JPG">
+    <img src="/img/gallery/80.jpg">
 <img src="/img/gallery/81.JPG">
 <img src="/img/gallery/82.JPG">
 <img src="/img/gallery/83.JPG">
