--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
 </p>
  <div class="header_image">
     <div class='slideshow'>
-  <img src="/img/gallery/84.jpg">
-  <img src="/img/gallery/83.jpg">
-  <img src="/img/gallery/81.jpg">
-  <img src="/img/gallery/87.jpg">
-  <img src="/img/gallery/92.jpg">
-  <img src="/img/gallery/91.jpg">	
+  <img src="/img/gallery/84.JPG">
+  <img src="/img/gallery/83.JPG">
+  <img src="/img/gallery/81.JPG">
+  <img src="/img/gallery/87.JPG">
+  <img src="/img/gallery/92.JPG">
+  <img src="/img/gallery/91.JPG">	
   </div>
  </div>
    </div>
