--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -38,7 +38,8 @@
   <ul>
     <li><a href="/">Home</a></li>
     <li><a href="/gallery">Gallery</a></li>
-    <li><a href="/events">Events</a></li>
+    <li><a href="/sponsors">Sponsors</a></li>
+    <li><a href="https://choiceschoolevents.vercel.app"> Events Website</a></li>
   </ul>
 </nav>
 	<main>
